--- a/views/seller-screen.ejs
+++ b/views/seller-screen.ejs
@@ -67,13 +67,12 @@ width: auto;
 		 
 	</span></div><div class="container"><ul id="errs"><li class="hdn">Draft has a listing policy warning/informational message</li></ul><div id="lyrCategoryBreadcrumb" class="row category hidden-phone"><div class="span24"><div class="well well-small"></div></div></div><div id="mainFormWrap" class="row" inflow=""><div id="mainForm" class="span19"><a name="describeSec"></a><span id="ccSecHdgPhonedescribe" class="mweb-h2 visible-phone"><span id="describe">Describe your item</span></span><span id="ccSecdescribe"><div class="describe well" inflow="{ &quot;property_name&quot; : &quot;sectionId&quot;, &quot;property_value&quot; : &quot;describe&quot;, &quot;section_title&quot; : &quot;Describe your item&quot; }">
 	<div><div id="ccSecHdgdescribe" class="section-heading hidden-phone" style="margin-bottom:0px;">
-	<h3><%=details[0].person_fname%>'s sales page</h3></div><div>Rating</div></div>
+	<table><tr><td><h3><%=details[0].person_fname%>'s sales page</h3></td><td style="text-indent: 2em;">Rating: <%=rating%></td></tr></table></div>
 	<table class="mgtb " role="presentation"><tbody><tr><td width="80%" valign="top">
 	</td></tr><tr><td width="20%" valign="top" id="lcont"><div class="pdLft"><div><div class="si-lr"><div class="si-re"><div class="si-pd"><div class="si-sp si-fl g-hlp si-fn"><div>
   <%if(sellerHome == 'Y'){%> <!-- inner if -->
    <a href='/product/new'>Create a New product listing </a> for your business.<br> 
  	<%}%>
- Rating : <b><%=rating%></b>
  </div>
  
  <%if(products.length > 0){%> <!-- outer if -->
