search based on product listed as and showing the name of the product on the templated

--- a/public/templates/grid.ejs
+++ b/public/templates/grid.ejs
@@ -4,12 +4,12 @@
 				<div class="lvpic pic p225 img left">
 					<div class="lvpicinner full-width picW s225">
 						<a href="" class="img imgWr2">
-				     		<img src="/images/<%=data[i].category_id%>.JPG" class="img" alt=<%=data[i].product_desc%> height="225" width="168">
+				     		<img src="/images/<%=data[i].category_id%>.JPG" class="img" alt=<%=data[i].product_name%> height="225" width="168">
 				     	</a>
 					</div>
 				</div>
 				<h3 class="lvtitle">
-					<a href="/product/details?productidfordisplay=<%=data[i].product_id%>" class="vip" style="display:block" title="Click this link to access <%=data[i].product_desc%>"><%=data[i].product_desc%></a>
+					<a href="/product/details?productidfordisplay=<%=data[i].product_id%>" class="vip" style="display:block" title="Click this link to access <%=data[i].product_name%>"><%=data[i].product_name%></a>
 				</h3>
 				<ul class="lvprices left space-zero" style="list-style:none outside none">
 					<li class="lvextras">
