cart functionality plus my cart button

--- a/views/Myebay.ejs
+++ b/views/Myebay.ejs
@@ -59,6 +59,12 @@ function logout(){
 					<a href="/seller-details" class="gh-eb-li-a">Seller Profile</a>
 				</div>
 			</li>
+
+			<li id="gh-eb-My" class="gh-eb-li gh-dd" data-imp="10">
+				<div class="gh-menu">
+					<a href="/c/cart/view" class="gh-eb-li-a">My Cart</a>
+				</div>
+			</li>
 			
 			<li class="gh-eb-li gh-dd" data-imp="10">
 				<div class="gh-menu">
