--- a/views/productDetails.ejs
+++ b/views/productDetails.ejs
@@ -235,6 +235,13 @@ bootbox.dialog({
 	<div class="u-flL u-b w29 " id="" style="width:30%">
 		<input id="seller_rating" placeholder="" aria-labelledby="sellerratinglabel" class="notranslate MaxBidClass" type="text" autocomplete="off" size="11" maxlength="10" name="seller_rating" value=""> 
 	</div>
+	<div class="u-flL ">
+		<!-- inserting code for another button -->
+ 		<!-- code ends  -->
+		<a role="button" _sp="p2047675.l4023" id="bidBtn_btn" onclick="javascript:
+			void window.open('/c/cart/add/<%=productDetails[0].product_id%>','1417728476930','width=250,height=250,toolbar=0,menubar=0,location=0,status=1,scrollbars=1,resizable=1,left=0,top=0');
+			return false;" style="" class="btn btn-prim btn-m vi-VR-btnWdth-L" href="/c/cart/add/<%=productDetails[0].product_id%>" vib="vib" rel="nofollow">Add to Cart</a>
+	</div>
 	<div class="spacer"></div>
 	<div class="spacer"></div>
 	<div class="spacer"></div>
