--- a/views/productDetails.ejs
+++ b/views/productDetails.ejs
@@ -30,6 +30,7 @@ function setTime() {
 		document.getElementById('lastLoggedIn-u').innerHTML = username;
 		document.getElementById('lastLoggedIn').innerHTML = " you last signed in on "+lastTimeLoggedIn;
 		document.getElementById('my-ebay-div').innerHTML = "<a href='/getCustomerInfo' class='gh-eb-li-a'>My eBay</a>";
+		document.getElementById('my-ebay-div').innerHTML = "<a href='/c/cart/view' class='gh-eb-li-a'>My Cart</a>";
 		document.getElementById('logout-div').innerHTML = "<form method = 'post' action = '/logout' id='logoutForm' style='display:none'>	</form><a href='#' class='gh-eb-li-a' onClick=logout()>Logout</a>";
 	}
 }
@@ -238,9 +239,8 @@ bootbox.dialog({
 	<div class="u-flL ">
 		<!-- inserting code for another button -->
  		<!-- code ends  -->
-		<a role="button" _sp="p2047675.l4023" id="bidBtn_btn" onclick="javascript:
-			void window.open('/c/cart/add/<%=productDetails[0].product_id%>','1417728476930','width=250,height=250,toolbar=0,menubar=0,location=0,status=1,scrollbars=1,resizable=1,left=0,top=0');
-			return false;" style="" class="btn btn-prim btn-m vi-VR-btnWdth-L" href="/c/cart/add/<%=productDetails[0].product_id%>" vib="vib" rel="nofollow">Add to Cart</a>
+		<a role="button" _sp="p2047675.l4023" id="bidBtn_btn" style="" 
+		class="btn btn-prim btn-m vi-VR-btnWdth-L" href="/c/cart/add/<%=productDetails[0].product_id%>" vib="vib" rel="nofollow">Add to Cart</a>
 	</div>
 	<div class="spacer"></div>
 	<div class="spacer"></div>
