--- a/views/edit-product.ejs
+++ b/views/edit-product.ejs
@@ -42,6 +42,7 @@
 		<link rel="stylesheet" href= '/stylesheets/anytime.css' />
  	<script src="/js/jquery.js"></script>
 	<script src='/js/anytime.js'></script>
+<script src="/js/moment.js"></script>
 		</head>
 		<body id="body" class="listingPage" style="cursor: default;">
 					<table class="gh-tbl">
