--- a/views/savedcart.ejs
+++ b/views/savedcart.ejs
@@ -13,10 +13,9 @@
 <form method='post' action='/c/cart/remove/saved' >
 	<input type='hidden' name='prod_id' value='<%=items[i].prod_id%>'/>
 	<br>
-		<%=items[i].prod_id%><br>
-		<%=items[i].prod_name%><br>
-		<%=items[i].prod_qty%><br>
-		<%=items[i].prod_price%><br>
+		Product Name 	 : <%=items[i].prod_name%><br>
+		Quantity 		 : <%=items[i].prod_qty%><br>
+		Price			 : <%=items[i].prod_price%><br>
 		
 		<input type='submit' value='Remove Item' /><br>
 </form>
