added duplicate check functionality

--- a/views/create-product.ejs
+++ b/views/create-product.ejs
@@ -99,7 +99,7 @@
 		<table>
 			<tr>
 				<td style="font-weight: bold; font-size: small;">Product Name:</td>
-				<td><input type="text" name="product_name" required="required"></td>
+				<td><input type="text" name="product_name" ></td>
 			</tr>
 			<tr><td><br>
 			</td></tr>
