--- a/views/mycart.ejs
+++ b/views/mycart.ejs
@@ -78,7 +78,7 @@ return false;">Remove from cart</a><br>
 </form>
 <p>Save the cart to proceed for checkout</p>
 <%}%>
-<p>An unsaved cart will automatically be cleared when the session expires unless checked out</p>
+<p>An unsaved cart will automatically be cleared when the session expires unless saved</p>
 
 </div>
 
