--- a/views/savedcart.ejs
+++ b/views/savedcart.ejs
@@ -62,7 +62,7 @@ function setTime() {
 <div id='saved'>
 
 <%if(items.length == 0){%>
-<p>Your cart is empty. Start <a href='/'>shopping!!</a></p>
+<p>Your cart is empty. Start shopping!!</p>
 <%}else{%>
 
 	<% for (var i=0; i<items.length; i++){%>
