--- a/public/templates/personGrid.ejs
+++ b/public/templates/personGrid.ejs
@@ -5,7 +5,7 @@
 				<div class="lvpic pic p225 img left">
 					<div class="lvpicinner full-width picW s225">
 						<a href="" class="img imgWr2">
-				     		<img src="/images/1.JPG" class="img" alt="Person image" height="225" width="168">
+				     		<img src="/images/placeholder-person.png" class="img" alt="Person image" height="225" width="168">
 				     	</a>
 					</div>
 				</div>
