--- a/views/create-product.ejs
+++ b/views/create-product.ejs
@@ -153,6 +153,8 @@
 		</table>
 	<div id='fixed-price' style="display: none">
 		<table>
+			<tr><td><br>
+			</td></tr>
 			<tr>
 				<td style="font-weight: bold; font-size: small;">Units In Stock:</td>
 				<td><input type="text" name="units_in_stock"></td>
@@ -169,14 +171,16 @@
 
 	<div id='auction' style="display: none">
 		<table>
+			<tr><td><br>
+			</td></tr>
 			<tr>
-				<td>Expiry Date</td>
+				<td style="font-weight: bold; font-size: small;">Expiry Date</td>
 				<td><input type="text" name='bid_expiry' id="date" /></td>
 			</tr>
 			<tr><td><br>
 			</td></tr>
 			<tr>
-				<td>Bid Start Amount in dollars:</td>
+				<td style="font-weight: bold; font-size: small;">Bid Start Amount in dollars:</td>
 				<td><input type='text' name='start_amount'></td>
 			</tr>
 			<tr><td><br>
