--- a/views/listBidsForProduct.ejs
+++ b/views/listBidsForProduct.ejs
@@ -316,7 +316,9 @@ if (typeof GH != "undefined" && GH) {GH_config = {"siteId":"0","geoLang":"[]",si
 
 			ebay.oDocument.oPage.createConfig();
 
-		</script><table><tr><td style="width:80%"><div class="BHpageTitle"><a name="mainContent"></a><h1 style="display:inline; font-size:24px; font-weight:normal; padding-left: 20px;">
+		</script>
+		<a href="/" style="text-indent:none;">eBay Home</a>
+		<table><tr><td style="width:80%"><div class="BHpageTitle"><a name="mainContent"></a><h1 style="display:inline; font-size:24px; font-weight:normal; padding-left: 20px;">
 
 									Bid history
 
@@ -423,28 +425,4 @@ if (typeof GH != "undefined" && GH) {GH_config = {"siteId":"0","geoLang":"[]",si
 							<div style="clear:both"></div><script type="text/javascript" language="JavaScript" xmlns:bx="http://www.ebay.com/2004/bex">
 
 					ebay.oDocument.oPage.createConfig = function() {var  c = ebay.oDocument.addConfig(new EbayConfig('EBX.CrossLinking'));c.sLayer='ebx_layer';c.sHTML='<table align="center" style="border:2px solid #0098CF; margin-bottom: 15px;" width="85%" cellpadding="0" cellspacing="0" bgcolor="#EDF9FF"><tr valign="middle"><td width="36" style="padding: 0 10px 0 10px;">
-					<img align="middle" alt=" " src="http://pics.ebaystatic.com/aw/pics/icon/iconInfo_16x16.gif" /></td><td width="80%" nowrap="nowrap" style="padding-right:10px" >You\'ve left eBay Express.</td><td align="left" nowrap="nowrap"><a href="http://www.express.<#1#>/">Shop again on eBay Express</a><span style="margin:0 10px 0 10px;">|</span><img align="bottom" src="http://pics.ebaystatic.com/aw/pics/express/icons/iconCart_15x10.gif" alt=""/> <a href="http://cart.express.<#1#>/ws/eBayISAPI.dll?ExpressCart&action.view=&from=Header">Shopping Cart<#2#></a></td><td width="135" nowrap="nowrap" style="padding: 0 20px 0 20px;"><img align="top" src="http://pics.ebaystatic.com/aw/pics/express/logos/logoExpress_95x39.gif" alt=""></img></td><td nowrap="nowrap" width="26" align="left"><a href="#1" id="b_close" name="b_close"><img align="middle" border="0" src="http://pics.ebaystatic.com/aw/pics/buttons/btnExpressClose.gif" alt="" ></img></a></td></tr></table>';c.sCartCountText=' (<#1#>)';c.sClose='b_close';c.aHost={'0':'ebay.com','77':'ebay.de','2':'ebay.co.uk','15':'ebay.com.au'};c.aHideOnParams=["fromebxris=1", "fromebxrisZ1"];} ;ebay.oDocument.oPage.createConfig();</script><!--Begin eBay Footer--><div id="glbfooter" class="gh-w gh-flex"><div><div id=rtm_html_1650></div><div id=rtm_html_1651></div></div><h2 class=gh-ar-hdn>Additional site navigation</h2><div id="gf-t-box"><table class="gf-t"><tr><td colspan=2><ul id="gf-l" ><li class="gf-li"><a href="http://community.ebay.com" 
-		 _exsp=m571.l3329 class="thrd gf-bar-a"
-	>Community</a></li><li class="gf-li"><a href="http://www.ebayinc.com" 
-		 _exsp=m571.l2602 class="thrd gf-bar-a"
-	>About eBay</a></li><li class="gf-li"><a href="http://announcements.ebay.com" 
-		 _sp=m571.l3330 class="thrd gf-bar-a"
-	>Announcements</a></li><li class="gf-li"><a href="http://pages.ebay.com/securitycenter/index.html" 
-		 _sp=m571.l2616 class="thrd gf-bar-a"
-	>Security Center</a></li><li class="gf-li"><a href="http://resolutioncenter.ebay.com/" 
-		 _sp=m571.l1619 class="thrd gf-bar-a"
-	>Resolution Center</a></li><li class="gf-li"><a href="http://pages.ebay.com/sellerinformation/index.html" 
-		 _sp=m571.l1613 class="thrd gf-bar-a"
-	>Seller Information Center</a></li><li class="gf-li"><a href="http://pages.ebay.com/help/policies/overview.html" 
-		 _sp=m571.l2604 class="thrd gf-bar-a"
-	>Policies</a></li><li class="gf-li"><a href="http://pages.ebay.com/sitemap.html" 
-		 _sp=m571.l1625 class="thrd gf-bar-a"
-	>Site Map</a></li><li class="gf-li"><a href="http://viv.ebay.com/ws/eBayISAPI.dll?EbayTime" 
-		 _sp=m571.l2606 class="thrd gf-bar-a"
-	>eBay official time</a></li><li class="gf-li"><a href="http://garden.ebay.com" 
-		 _sp=m571.l1617 class="thrd gf-bar-a"
-	>Preview new features</a></li><li class="gf-li"><a href="http://ocsnext.ebay.com/ocs/cuhome" 
-		 _sp=m571.l2911 class="thrd gf-bar-a"
-	>Contact us</a></li><li class="gf-li"><a href="http://qu.ebay.com/survey?srvName=globalheader+%28footer-US%29" 
-		 _sp=m571.l2628 class="thrd gh-survey gf-bar-a" title="opens in a new window or tab"
-	>Tell us what you think</a></li></ul></td></tr><tr><td><div class="footerBGPost"><table><tbody><tr><td><a href="http://pages.ebay.com/ebay-money-back-guarantee/" _sp="m571.l4539" id="gf-bp"><span class=gh-ar-hdn>eBay Money Back Guarantee</span></a></td></tr></tbody></table></div></td></tr><tr valign="top"><td class="gf-legal">Copyright © 1995-2014 eBay Inc. All Rights Reserved. <a href="http://pages.ebay.com/help/policies/user-agreement.html?rt=nc">User Agreement</a>, <a href="http://pages.ebay.com/help/policies/privacy-policy.html?rt=nc">Privacy</a> and <a href="http://pages.ebay.com/help/account/cookies-web-beacons.html">Cookies</a>.</td></tr></table></div></div><!--ts:2014.11.24.09:01--><!--rq:--><!--rvr:59rc5--><!--@sgfp@ footerStyle=FULL @egfp@--></div></div></div></div><!--End eBay Footer--></body></html>
+					<img align="middle" alt=" " src="http://pics.ebaystatic.com/aw/pics/icon/iconInfo_16x16.gif" /></td><td width="80%" nowrap="nowrap" style="padding-right:10px" >You\'ve left eBay Express.</td><td align="left" nowrap="nowrap"><a href="http://www.express.<#1#>/">Shop again on eBay Express</a><span style="margin:0 10px 0 10px;">|</span><img align="bottom" src="http://pics.ebaystatic.com/aw/pics/express/icons/iconCart_15x10.gif" alt=""/> <a href="http://cart.express.<#1#>/ws/eBayISAPI.dll?ExpressCart&action.view=&from=Header">Shopping Cart<#2#></a></td><td width="135" nowrap="nowrap" style="padding: 0 20px 0 20px;"><img align="top" src="http://pics.ebaystatic.com/aw/pics/express/logos/logoExpress_95x39.gif" alt=""></img></td><td nowrap="nowrap" width="26" align="left"><a href="#1" id="b_close" name="b_close"><img align="middle" border="0" src="http://pics.ebaystatic.com/aw/pics/buttons/btnExpressClose.gif" alt="" ></img></a></td></tr></table>';c.sCartCountText=' (<#1#>)';c.sClose='b_close';c.aHost={'0':'ebay.com','77':'ebay.de','2':'ebay.co.uk','15':'ebay.com.au'};c.aHideOnParams=["fromebxris=1", "fromebxrisZ1"];} ;ebay.oDocument.oPage.createConfig();</script></body></html>
